<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".QuizActivity"
        >


    <TextView
            android:id="@+id/quizDifficultyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_text"
            android:padding="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            />

    <TextView
            android:id="@+id/quizDifficultyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Easy"
            android:textColor="@color/green"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/quizDifficultyText"
            />

    <TextView
            android:id="@+id/quizCategoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/category_text"
            android:padding="16dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/quizDifficultyText"
            app:layout_constraintTop_toBottomOf="@id/quizDifficultyText"
            />

    <TextView
            android:id="@+id/quizCategoryValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Animal"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quizCategoryText"
            />


    <TextView
            android:id="@+id/quizQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


    <Button
            android:id="@+id/positiveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/positive_button"
            android:layout_margin="8dp"
            android:background="@color/green"
            app:layout_constraintTop_toBottomOf="@id/quizQuestion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/negativeButton"
            />
    <Button
            android:id="@+id/negativeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/negative_button"
            android:background="@color/red"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/quizQuestion"
            app:layout_constraintStart_toEndOf="@id/positiveButton"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            app:layout_constraintStart_toEndOf="@id/prevButton"
            app:layout_constraintTop_toTopOf="@id/prevButton"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <Button
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/prev_button"
            app:layout_constraintTop_toBottomOf="@id/positiveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/nextButton"
            />

</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.SwipeRefreshLayout>